--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 #root {
-  max-width: 1280px;
+  max-width: fit;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  overflow: hidden;
+  width: 100%;
 }
-
+iframe{
+  height: 99vh;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
